# spmie

./: .gitignore  CMakeLists.txt  README.md  main.cpp  nequick.for  spmie imitation result.ipynb
data/: diplats.asc  fort.16  test_tle.tle  visual.tle
formal-doc/: appendix.tex  biblio.bib  conclusion.tex  data.tex  dissertation.aux  dissertation.bbl  dissertation.blg  dissertation.dvi  dissertation.tex  dissertation.toc  introduction.tex  names.tex  observe.tex  packages.tex  part1.tex  part2.tex  part3.tex  part4.tex  styles.tex  technical.tex  title.tex
formal-doc/diagrams/: Common-Modules-Work-Scheme.graphml
formal-doc/graphs/: common-immitation-scheme.tex  common-module-flow.tex  common-resolver-scheme.tex  control-flow-scheme.tex  data-flow-scheme.tex  tle-format.tex
src/: .main.cpp.swp  astroutils.h  coordpoints.cpp  coordpoints.h  geocentricpoint.cpp  geocentricpoint.h  main.cpp  nequick.cpp  nequick.f  nequick.h  orbitcalculator.cpp  orbitcalculator.h  slqu.f
src/astro/: astroutils.cpp  astroutils.h  coordpoints.cpp  coordpoints.h  orbitcalculator.cpp
src/astro/sgp_sdp_model/: sgp4unit.cpp
src/librsim/: ImitationDriver.cpp  ImitationDriver.h  SightObject.cpp  SightObject.h  SightReport.cpp  SightReport.h
src/librsim/astro/: SightObject.cpp  SightObject.h  SightReport.h  TLEReader.cpp  TLEReader.h  astroutils.cpp  astroutils.h  coordpoints.cpp  coordpoints.h  orbitcalculator.cpp  orbitcalculator.h  orbitresolver.cpp  orbitresolver.h  radarstation.cpp  radarstation.h
src/librsim/astro/sgp_sdp_model/: sgp4io.cpp  sgp4io.h  sgp4unit.cpp  sgp4unit.h
src/librsim/nequick/: nequick.cpp  nequick.f  nequick.h
src/sgp_sdp_model/: sgp4ext.cpp  sgp4unit.cpp
test/: TLEReaderTest.cpp  TLEReaderTest.h
ui/: CMakeLists.txt
